--- a/RMaps.AppLib/res/values/strings_news.xml
+++ b/RMaps.AppLib/res/values/strings_news.xml
@@ -6,6 +6,10 @@ Buy RMaps.Donation on Google Play Store</b>\n
 \n
 Do you want to help me translate the app interface? Write me to email robertk506@gmail.com\n
 \n
+v.0.9.4.1-xavPatch.1\n
++ Uses screen  density for calculate a good scale for an easy readable text on map\n
++ Adds some buttons for options display menus\n
+\n
 v.0.9.4\n
 + Dashboard. Use Menu - Dashboard. Long press on dashboard to add or change value\n
 + I am here: Long press on the screen to point your location without GPS\n  
