minor from Lint errors

--- a/RMaps.AppLib/res/layout/tabloid.xml
+++ b/RMaps.AppLib/res/layout/tabloid.xml
@@ -21,11 +21,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/person" />
 
-        <com.robert.maps.applib.view.ScreenCellView
-            android:id="@+id/screenCellView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </com.robert.maps.applib.view.ScreenCellView>
+        <!-- Patch Xav : unknow ScreenCellView-->
 
     </TableRow>
 
