--- a/RMaps.AppLib/res/layout/track_stat.xml
+++ b/RMaps.AppLib/res/layout/track_stat.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:rmaps="http://schemas.android.com/apk/res/com.robert.maps.applib"
+    xmlns:rmaps="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -80,7 +80,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -120,7 +120,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -160,7 +160,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -200,7 +200,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -240,7 +240,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -280,7 +280,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -320,7 +320,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -360,7 +360,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -400,7 +400,7 @@
             </TextView>
 
             <RelativeLayout
-                android:id="@+id/rl1"
+                android:id="@+id/rl10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
