--- a/RMaps.AppLib/res/layout/downloaderactivity.xml
+++ b/RMaps.AppLib/res/layout/downloaderactivity.xml
@@ -68,6 +68,7 @@
 
     <LinearLayout
         android:id="@+id/cmdbar"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
